--- a/kontakta oss.html
+++ b/kontakta oss.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -84,7 +84,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="/img/logo.png" height="55">
+			<img src="img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
