--- a/avhämtning.html
+++ b/avhämtning.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -42,7 +42,7 @@
 	</nav>
 
     <div class="page_title_container">
-		<img src="/img/avhämtning/Avhämtning.png">
+		<img src="img/avhämtning/Avhämtning.png">
 	</div>
     
     <div class="page_info_container">
@@ -74,7 +74,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="/img/logo.png" height="55">
+			<img src="img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
