--- a/bildgalleri.html
+++ b/bildgalleri.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -42,27 +42,27 @@
 	</nav>
 
     <div class="page_title_container">
-		<img src="/img/bildgalleri/bildgalleri.png">
+		<img src="img/bildgalleri/bildgalleri.png">
 	</div>
 
     <div class="pictures_container_background">
         <div class="pictures_container">
-            <img src="/img/bildgalleri/bild 1.png">
+            <img src="img/bildgalleri/bild 1.png">
         </div>
         <div class="pictures_container">
-            <img src="/img/bildgalleri/bild 2.png">
+            <img src="img/bildgalleri/bild 2.png">
         </div>
         <div class="pictures_container">
-            <img src="/img/bildgalleri/bild 3.png">
+            <img src="img/bildgalleri/bild 3.png">
         </div>
         <div class="pictures_container">
-            <img src="/img/bildgalleri/bild 4.png">
+            <img src="img/bildgalleri/bild 4.png">
         </div>
         <div class="pictures_container">
-            <img src="/img/bildgalleri/bild 5.png">
+            <img src="img/bildgalleri/bild 5.png">
         </div>
         <div class="pictures_container">
-            <img src="/img/bildgalleri/bild 6.png">
+            <img src="img/bildgalleri/bild 6.png">
         </div>
 
 
@@ -71,7 +71,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="/img/logo.png" height="55">
+			<img src="img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
