--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -43,7 +43,7 @@
 
 	<div class="top_background_container box_shadow">
 		<div class="image_container">
-			<img src="/img/logo.png">
+			<img src="img/logo.png">
 			<p class="yellow text_shadow baloo"><b>Välkommen till Gammlia Pizzeria!
 					Hos oss hittar du smakrika pizzor, fräscha sallader och mycket mer – alltid med färska råvaror och
 					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
@@ -85,20 +85,20 @@
 	<div class="bildgalleri_container">
 		<div class="left_container">
 			<div class="small_pictures_container">
-				<img id="one" src="/img/bildgalleri/bild 1.png">
-				<img id="one" src="/img/bildgalleri/bild 2.png">
+				<img id="one" src="img/bildgalleri/bild 1.png">
+				<img id="one" src="img/bildgalleri/bild 2.png">
 			</div>
 			<div class="big_pictures_container">
-				<img id="two" src="/img/bildgalleri/bild 3.png">
+				<img id="two" src="img/bildgalleri/bild 3.png">
 			</div>
 		</div>
 		<div class="right_container">
 			<div class="big_pictures_container">
-				<img id="two" src="/img/bildgalleri/bild 6.png">
+				<img id="two" src="img/bildgalleri/bild 6.png">
 			</div>
 			<div class="small_pictures_container">
-				<img id="one" src="/img/bildgalleri/bild 4.png">
-				<img id="one" src="/img/bildgalleri/bild 5.png">
+				<img id="one" src="img/bildgalleri/bild 4.png">
+				<img id="one" src="img/bildgalleri/bild 5.png">
 			</div>
 		</div>
 	</div>
@@ -110,7 +110,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="/img/logo.png" height="55">
+			<img src="img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
