--- a/lunch.html
+++ b/lunch.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -42,7 +42,7 @@
 	</nav>
 
 		<div class="page_title_container">
-			<img src="/img/lunch/lunch.png">
+			<img src="img/lunch/lunch.png">
 		</div>
 
 		<div class="lunch_container">
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="video_container">
-				<video src="/img/lunch/lunch video.mp4" autoplay controls width="500px" height="500"></video>
+				<video src="img/lunch/lunch video.mp4" autoplay controls width="500px" height="500"></video>
 			</div>
 
 			<iframe
@@ -69,7 +69,7 @@
 
 		<footer>
 			<div class="logo_footer">
-				<img src="/img/logo.png" height="55">
+				<img src="img/logo.png" height="55">
 			</div>
 			<div class="footer_container">
 				<div class="footer_textbox baloo2">
