--- a/meny.html
+++ b/meny.html
@@ -17,7 +17,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -43,7 +43,7 @@
 	</nav>
 
 	<div  id="start_meny" class="page_title_container">
-		<img src="/img/meny/meny_titel.png" height="100">
+		<img src="img/meny/meny_titel.png" height="100">
 
 	</div>
 
@@ -51,7 +51,7 @@
 		<div class="meny_title_container red_fade box_shadow">
 			<div class="meny_title_container_content baloo yellow bold">
 				<h3 class="text_shadow">PIZZOR</h3>
-				<img src="/img/meny/pizza.png">
+				<img src="img/meny/pizza.png">
 			</div>
 		</div>
 
@@ -256,7 +256,7 @@
 		<div id="vegetarian_meny" class="meny_title_container green_fade box_shadow">
 			<div class="meny_title_container_content baloo yellow bold">
 				<h3 class="text_shadow">VEGETARISKA PIZZOR</h3>
-				<img src="/img/meny/vegetariskpizza.png">
+				<img src="img/meny/vegetariskpizza.png">
 			</div>
 		</div>
 
@@ -324,7 +324,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="/img/logo.png" height="55">
+			<img src="img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
