--- a/recensioner.html
+++ b/recensioner.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="/img/logo.png" height="75">
+				<img src="img/logo.png" height="75">
 			</div>
 
 			<div class="navtext">
@@ -42,7 +42,7 @@
 	</nav>
 
 	<div class="page_title_container">
-		<img src="/img/recensioner/Recensioner.png">
+		<img src="img/recensioner/Recensioner.png">
 	</div>
 
 		<div class="recensioner_background">
@@ -70,17 +70,17 @@
 		</div>
 
 		<div class="placeholder_reviews_comtainer">
-			<img src="/img/Recension 1.png">
-			<img src="/img/Recension 1.png">
-			<img src="/img/Recension 1.png">
-			<img src="/img/Recension 1.png">
-			<img src="/img/Recension 1.png">
-			<img src="/img/Recension 1.png">
+			<img src="img/Recension 1.png">
+			<img src="img/Recension 1.png">
+			<img src="img/Recension 1.png">
+			<img src="img/Recension 1.png">
+			<img src="img/Recension 1.png">
+			<img src="img/Recension 1.png">
 		</div>
 
 	<footer>
 		<div class="logo_footer">
-			<img src="/img/logo.png" height="55">
+			<img src="img/logo.png" height="55">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
