--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="Logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html" style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
 				<a href=" lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontaktaoss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -43,13 +43,13 @@
 
 	<div class="top_background_container box_shadow">
 		<div class="image_container">
-			<img src="img/logo.png">
+			<img src="img/logo.png" alt="Logo">
 			<p class="yellow text_shadow baloo"><b>Välkommen till Gammlia Pizzeria!
 					Hos oss hittar du smakrika pizzor, fräscha sallader och mycket mer – alltid med färska råvaror och
 					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
 					öppet alla dagar i veckan och ser fram emot att servera dig!
 					Välkommen in!</b></p>
-			<a href="kontakta oss.html" class="Button baloo">Kontakta oss här</a>
+			<a href="kontakta\_oss.html" class="Button baloo">Kontakta oss här</a>
 		</div>
 	</div>
 	<div class="home_meny_container">
@@ -85,20 +85,20 @@
 	<div class="bildgalleri_container">
 		<div class="left_container">
 			<div class="small_pictures_container">
-				<img id="one" src="img/bildgalleri/bild 1.png">
-				<img id="one" src="img/bildgalleri/bild 2.png">
+				<img src="img/bildgalleri/bild1.png" alt="pizza">
+				<img src="img/bildgalleri/bild2.png" alt="pizza">
 			</div>
 			<div class="big_pictures_container">
-				<img id="two" src="img/bildgalleri/bild 3.png">
+				<img src="img/bildgalleri/bild3.png">
 			</div>
 		</div>
 		<div class="right_container">
 			<div class="big_pictures_container">
-				<img id="two" src="img/bildgalleri/bild 6.png">
+				<img src="img/bildgalleri/bild6.png">
 			</div>
 			<div class="small_pictures_container">
-				<img id="one" src="img/bildgalleri/bild 4.png">
-				<img id="one" src="img/bildgalleri/bild 5.png">
+				<img src="img/bildgalleri/bild4.png">
+				<img src="img/bildgalleri/bild5.png">
 			</div>
 		</div>
 	</div>
