--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					kärlek till mat. Kom in och njut av en god lunch eller en härlig middag i en trivsam miljö. Vi har
 					öppet alla dagar i veckan och ser fram emot att servera dig!
 					Välkommen in!</b></p>
-			<a href="kontakta\_oss.html" class="Button baloo">Kontakta oss här</a>
+			<a href="kontaktaoss.html" class="Button baloo">Kontakta oss här</a>
 		</div>
 	</div>
 	<div class="home_meny_container">
@@ -89,16 +89,16 @@
 				<img src="img/bildgalleri/bild2.png" alt="pizza">
 			</div>
 			<div class="big_pictures_container">
-				<img src="img/bildgalleri/bild3.png">
+				<img src="img/bildgalleri/bild3.png" alt="pizza">
 			</div>
 		</div>
 		<div class="right_container">
 			<div class="big_pictures_container">
-				<img src="img/bildgalleri/bild6.png">
+				<img src="img/bildgalleri/bild6.png" alt="pizza">
 			</div>
 			<div class="small_pictures_container">
-				<img src="img/bildgalleri/bild4.png">
-				<img src="img/bildgalleri/bild5.png">
+				<img src="img/bildgalleri/bild4.png" alt="pizza">
+				<img src="img/bildgalleri/bild5.png" alt="pizza">
 			</div>
 		</div>
 	</div>
@@ -110,7 +110,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="img/logo.png" height="55">
+			<img src="img/logo.png" height="55" alt="logo">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
@@ -127,7 +127,7 @@
 				<ul class="white">
 					<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
