--- a/lunch.html
+++ b/lunch.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html"><strong>HEM </strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
 				<a href=" lunch.html" style="color: #BF8E06"><strong> <ins> LUNCH </ins> </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontaktaoss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 	</nav>
 
 		<div class="page_title_container">
-			<img src="img/lunch/lunch.png">
+			<img src="img/lunch/lunch.png" alt="page title">
 		</div>
 
 		<div class="lunch_container">
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="video_container">
-				<video src="img/lunch/lunch video.mp4" autoplay controls width="500px" height="500"></video>
+				<video src="img/lunch/lunchvideo.mp4" autoplay controls width="500px" height="500px"></video>
 			</div>
 
 			<iframe
@@ -69,7 +69,7 @@
 
 		<footer>
 			<div class="logo_footer">
-				<img src="img/logo.png" height="55">
+				<img src="img/logo.png" height="55" alt="logo">
 			</div>
 			<div class="footer_container">
 				<div class="footer_textbox baloo2">
@@ -86,7 +86,7 @@
 					<ul class="white">
 						<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 						<li> <a href="meny.html"> MENY </a></li>
-						<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+						<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 					</ul>
 				</div>
 	
