--- a/avhämtning.html
+++ b/avhämtning.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html"><strong> HEM </strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
 				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html" style="color: #BF8E06"><strong> <ins> AVHÄMTNING </ins>  </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontaktaoss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 	</nav>
 
     <div class="page_title_container">
-		<img src="img/avhämtning/Avhämtning.png">
+		<img src="img/avhämtning/Avhämtning.png" alt="page title">
 	</div>
     
     <div class="page_info_container">
@@ -56,25 +56,25 @@
 
     <div class="picture_background">
         <div class="avhämtning_picture_container">
-            <img src="img/avhämtning/image1.png">
+            <img src="img/avhämtning/image1.png" alt="picture of restaurant">
         </div>
 
         <div class="avhämtning_picture_container">
-            <img src="img/avhämtning/image2.png">
+            <img src="img/avhämtning/image2.png" alt="pizza">
         </div>
 
         <div class="avhämtning_picture_container">
-            <img src="img/avhämtning/image3.png">
+            <img src="img/avhämtning/image3.png" alt="pizza">
         </div>
 
         <div class="avhämtning_picture_container">
-            <img src="img/avhämtning/image4.png">
+            <img src="img/avhämtning/image4.png" alt="pizza">
         </div>
     </div>
 
 	<footer>
 		<div class="logo_footer">
-			<img src="img/logo.png" height="55">
+			<img src="img/logo.png" height="55" alt="logo">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
@@ -91,7 +91,7 @@
 				<ul class="white">
 					<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
