--- a/bildgalleri.html
+++ b/bildgalleri.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html"  ><strong> HEM</strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
 				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html" style="color: #BF8E06"> <strong> <ins> BILDGALLERI </ins></strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontaktaoss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -42,27 +42,27 @@
 	</nav>
 
     <div class="page_title_container">
-		<img src="img/bildgalleri/bildgalleri.png">
+		<img src="img/bildgalleri/bildgalleri.png" alt="page title">
 	</div>
 
     <div class="pictures_container_background">
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild 1.png">
+            <img src="img/bildgalleri/bild1.png">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild 2.png">
+            <img src="img/bildgalleri/bild2.png">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild 3.png">
+            <img src="img/bildgalleri/bild3.png">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild 4.png">
+            <img src="img/bildgalleri/bild4.png">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild 5.png">
+            <img src="img/bildgalleri/bild5.png">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild 6.png">
+            <img src="img/bildgalleri/bild6.png">
         </div>
 
 
@@ -71,7 +71,7 @@
 
 	<footer>
 		<div class="logo_footer">
-			<img src="img/logo.png" height="55">
+			<img src="img/logo.png" height="55" alt="logo">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
@@ -88,7 +88,7 @@
 				<ul class="white">
 					<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
