--- a/bildgalleri.html
+++ b/bildgalleri.html
@@ -47,22 +47,22 @@
 
     <div class="pictures_container_background">
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild1.png">
+            <img src="img/bildgalleri/bild1.png" alt="pizza">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild2.png">
+            <img src="img/bildgalleri/bild2.png" alt="pizza">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild3.png">
+            <img src="img/bildgalleri/bild3.png" alt="pizza">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild4.png">
+            <img src="img/bildgalleri/bild4.png" alt="pizza">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild5.png">
+            <img src="img/bildgalleri/bild5.png" alt="pizza">
         </div>
         <div class="pictures_container">
-            <img src="img/bildgalleri/bild6.png">
+            <img src="img/bildgalleri/bild6.png" alt="pizza">
         </div>
 
 
