--- a/kontaktaoss.html
+++ b/kontaktaoss.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html"><strong>HEM </strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
-				<a href=" lunch.html"><strong> LUNCH </strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
+				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html" style="color: #BF8E06"><strong> <ins>KONTAKTA OSS</ins> </strong> </a>
+				<a href="kontaktaoss.html" style="color: #BF8E06"><strong> <ins>KONTAKTA OSS</ins> </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -43,7 +43,7 @@
 
 	<div class="form_container">
 		<div class="form_info_container">
-			<h1 class="baloo white text_shadow"> Kontakta oss </h3>
+			<h1 class="baloo white text_shadow"> Kontakta oss </h1>
 			<p> Lämna kontaktuppgifter och lite kort om vad du har på hjärtat så hör vi av oss inom 24 timmar!</p>
 			<p> Gammliavägen 3</p>
 			<p> 903 42 Umeå</p>
@@ -52,24 +52,24 @@
 		</div>
 
 		<div class="form_section_container">
-			<h5>NAMN ELLER FÖRETAG</h4>
+			<h5>NAMN ELLER FÖRETAG</h5>
 				<input class="box_shadow" placeholder="Ditt namn..." type="text">
 		</div>
 		<div class="form_section_container">
-			<h5>MEJLADRESS</h4>
+			<h5>MEJLADRESS</h5>
 				<input class="box_shadow" placeholder="Din mejladress..." type="email">
 		</div>
 		<div class="form_section_container">
-			<h5>TELEFONNUMMER</h4>
+			<h5>TELEFONNUMMER</h5>
 				<input class="box_shadow" placeholder="Ditt telefonnummer..." type="text">
 		</div>
 		<div class="form_section_container">
-			<h5>ÄMNE</h4>
+			<h5>ÄMNE</h5>
 				<input class="box_shadow" placeholder="Ämne..." type="text">
 		</div>
 		<div class="form_section_container">
-			<h5>MEDDELANDE</h4>
-				<textarea class="box_shadow baloo2" placeholder="Skriv ditt meddelande" type="text"></textarea>
+			<h5>MEDDELANDE</h5>
+				<textarea class="box_shadow baloo2" placeholder="Skriv ditt meddelande"></textarea>
 		</div>
 
 		<div class="checkbox_container">
@@ -78,13 +78,13 @@
 		</div>
 
 		<div class="submit_form_container">
-			<input type="submit" value="Skicka"></submit>
+			<input type="submit" value="Skicka">
 		</div>
 	</div>
 
 	<footer>
 		<div class="logo_footer">
-			<img src="img/logo.png" height="55">
+			<img src="img/logo.png" height="55" alt="logo">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
@@ -101,7 +101,7 @@
 				<ul class="white">
 					<li> <a href="recensioner.html"> RECENSIONER</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
