--- a/recensioner.html
+++ b/recensioner.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html"><strong>HEM</strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
 				<a href=" lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontaktaoss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html" style="color: #BF8E06"><strong> <ins> RECENSIONER </ins></strong> </a>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 	</nav>
 
 	<div class="page_title_container">
-		<img src="img/recensioner/Recensioner.png">
+		<img src="img/recensioner/Recensioner.png" alt="page title">
 	</div>
 
 		<div class="recensioner_background">
@@ -61,7 +61,7 @@
 
 		<div class="review_container baloo2 box_shadow">
 			<div class="review_textbox">
-				<textarea class="review_gray" type="text" placeholder="Lämna din recension här..."></textarea>
+				<textarea class="review_gray" placeholder="Lämna din recension här..."></textarea>
 			</div>
 		</div>
 
@@ -70,17 +70,17 @@
 		</div>
 
 		<div class="placeholder_reviews_comtainer">
-			<img src="img/Recension 1.png">
-			<img src="img/Recension 1.png">
-			<img src="img/Recension 1.png">
-			<img src="img/Recension 1.png">
-			<img src="img/Recension 1.png">
-			<img src="img/Recension 1.png">
+			<img src="img/Recension1.png" alt="recension example image">
+			<img src="img/Recension1.png" alt="recension example image">
+			<img src="img/Recension1.png" alt="recension example image">
+			<img src="img/Recension1.png" alt="recension example image">
+			<img src="img/Recension1.png" alt="recension example image">
+			<img src="img/Recension1.png" alt="recension example image">
 		</div>
 
 	<footer>
 		<div class="logo_footer">
-			<img src="img/logo.png" height="55">
+			<img src="img/logo.png" height="55" alt="logo">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
@@ -97,7 +97,7 @@
 				<ul class="white">
 					<li> <a> OM OSS</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
