--- a/table.html
+++ b/table.html
@@ -16,16 +16,16 @@
 	<nav>
 		<div class="banner baloo">
 			<div class="logo_nav">
-				<img src="img/logo.png" height="75">
+				<img src="img/logo.png" height="75" alt="logo">
 			</div>
 
 			<div class="navtext">
 				<a href="index.html"  style="color: #BF8E06"><strong> <ins> HEM</ins> </strong> </a>
-				<a href="meny.html""><strong>MENY</strong> </a>
+				<a href="meny.html"><strong>MENY</strong> </a>
 				<a href="lunch.html"><strong> LUNCH </strong> </a>
 				<a href="avhämtning.html"><strong> AVHÄMTNING </strong> </a>
 				<a href="bildgalleri.html"> <strong> BILDGALLERI </strong> </a>
-				<a href="kontakta oss.html"><strong> KONTAKTA OSS </strong> </a>
+				<a href="kontaktaoss.html"><strong> KONTAKTA OSS </strong> </a>
 				<a href="recensioner.html"><strong> RECENSIONER </strong> </a>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 		<div class="table_container">
 			<h2 class="baloo text_shadow yellow">ÖPPETTIDER</h2>
 			<table bgcolor="black">
-				<tr bgcolor="grey">
+				<tr id="tableone">
 					<th>Måndag</th>
 					<th>Tisdag</th>
 					<th>Onsdag</th>
@@ -53,7 +53,7 @@
 					<th>Lördag</th>
 					<th>Söndag</th>
 				</tr>
-				<tr bgcolor="lightgrey">
+				<tr id="tabletwo">
 					<td>10:30-20:00</td>
 					<td>10:30-20:00</td>
 					<td>10:30-20:00</td>
@@ -68,7 +68,7 @@
     
 	<footer>
 		<div class="logo_footer">
-			<img src="img/logo.png" height="55">
+			<img src="img/logo.png" height="55" alt="logo">
 		</div>
 		<div class="footer_container">
 			<div class="footer_textbox baloo2">
@@ -85,7 +85,7 @@
 				<ul class="white">
 					<li> <a> OM OSS</a> </li>
 					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontakta oss.html"> KONTAKTA OSS </a> </li>
+					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
 				</ul>
 			</div>
 
