--- a/table.html
+++ b/table.html
@@ -43,7 +43,7 @@
 	<div class="table_background_container">
 		<div class="table_container">
 			<h2 class="baloo text_shadow yellow">ÖPPETTIDER</h2>
-			<table bgcolor="black">
+			<table>
 				<tr id="tableone">
 					<th>Måndag</th>
 					<th>Tisdag</th>
