--- a/table.html
+++ b/table.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="Sebatian Gabrielsson">
 	<meta name="description" content="Gammlia pizzerias hemsida">
 	<meta name="keywords" content="Gammlia pizzeria">
+	<script src="script.js" defer></script>
 
 </head>
 
