--- a/avhämtning.html
+++ b/avhämtning.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Sebatian Gabrielsson">
 	<meta name="description" content="Gammlia pizzerias avhämtning">
 	<meta name="keywords" content="Gammlia pizzeria avhämtning">
-
+	<script src="script.js" defer></script>
 </head>
 
 <body>
@@ -80,9 +80,9 @@
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
 				<ul class="white">
-					<li data-day="1">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;</li>
-					<li data-day="2"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;</li>
-					<li data-day="3"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp; </li>
+					<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
+					<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
+					<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp; </li>
 				</ul>
 			</div>
 
@@ -103,7 +103,6 @@
 				</ul>
 			</div>
 		</div>
-
 	</footer>
 
 </body>
