--- a/meny.html
+++ b/meny.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="Sebatian Gabrielsson">
 	<meta name="description" content="Gammlia pizzerias meny">
 	<meta name="keywords" content="Gammlia pizzeria meny">
-
+	<script src="script.js" defer></script>
 </head>
 
 <body>
@@ -330,9 +330,9 @@
 			<div class="footer_textbox baloo2">
 				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
 				<ul class="white">
-					<li data-day="1">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;</li>
-					<li data-day="2"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;</li>
-					<li data-day="3"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp; </li>
+					<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
+					<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
+					<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp; </li>
 				</ul>
 			</div>
 
@@ -353,7 +353,6 @@
 				</ul>
 			</div>
 		</div>
-
 	</footer>
 </body>
 
