--- a/recensioner.html
+++ b/recensioner.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Sebatian Gabrielsson">
 	<meta name="description" content="Gammlia pizzerias recensioner">
 	<meta name="keywords" content="Gammlia pizzeria recensioner">
-
+	<script src="script.js" defer></script>
 </head>
 
 <body>
@@ -78,39 +78,38 @@
 			<img src="img/Recension1.png" alt="recension example image">
 		</div>
 
-	<footer>
-		<div class="logo_footer">
-			<img src="img/logo.png" height="55" alt="logo">
-		</div>
-		<div class="footer_container">
-			<div class="footer_textbox baloo2">
-				<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
-				<ul class="white">
-					<li data-day="1">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00 &nbsp;</li>
-					<li data-day="2"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 &nbsp;</li>
-					<li data-day="3"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 &nbsp; </li>
-				</ul>
+		<footer>
+			<div class="logo_footer">
+				<img src="img/logo.png" height="55" alt="logo">
 			</div>
-
-			<div class="footer_textbox baloo2">
-				<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
-				<ul class="white">
-					<li> <a> OM OSS</a> </li>
-					<li> <a href="meny.html"> MENY </a></li>
-					<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
-				</ul>
+			<div class="footer_container">
+				<div class="footer_textbox baloo2">
+					<h3 class="baloo yellow"><strong>ÖPPETTIDER</strong></h3>
+					<ul class="white">
+						<li data-day="1,2,3,4">Mån - Tors &nbsp; &nbsp; &nbsp;10:30-20:00  <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
+						<li data-day="5"> Fre &nbsp; &nbsp; &nbsp; 10:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp;</li>
+						<li data-day="6,0"> Lör - Sön &nbsp; &nbsp; &nbsp; 12:00 - 20:00 <span class="arrow"><h5>&#8592;</h5></span>&nbsp; </li>
+					</ul>
+				</div>
+	
+				<div class="footer_textbox baloo2">
+					<h3 class="baloo yellow"><strong>NAVIGERING</strong></h3>
+					<ul class="white">
+						<li> <a href="recensioner.html"> RECENSIONER</a> </li>
+						<li> <a href="meny.html"> MENY </a></li>
+						<li> <a href="kontaktaoss.html"> KONTAKTA OSS </a> </li>
+					</ul>
+				</div>
+	
+				<div class="footer_textbox baloo2">
+					<h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
+					<ul class="white">
+						<li>090-77 53 05&nbsp;</li>
+						<li>info@gammliapizzeria.se&nbsp; </li>
+					</ul>
+				</div>
 			</div>
-
-			<div class="footer_textbox baloo2">
-				<h3 class="baloo yellow"><strong>KONTAKA OSS</strong></h3>
-				<ul class="white">
-					<li>090-77 53 05&nbsp;</li>
-					<li>info@gammliapizzeria.se&nbsp; </li>
-				</ul>
-			</div>
-		</div>
-
-	</footer>
+		</footer>
 
 </body>
 
